API: gairebé acabada
